Went from Batman to Sarah

--- a/Batman.html
+++ b/Batman.html
@@ -1,3 +1,14 @@
-<h1>I'm a heading</h1>
-<p> This is a paragraph</p>
-<a href="https://google.com" target="_blank" title="Link to Google">I am a link! follow me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Batman</title>
+</head>
+<body>
+	<h1>I'm a heading</h1>
+	<p> This is a <b>paragraph</b></p>
+	<a href="https://google.com" target="_blank" title="Link to Google">I am a link! follow me!</a>
+	<p>My name is: <br>
+	SarahGatliff</p>
+	<img src="images/sarah.jpg">
+</body>
+</html>
